gitops/components/apps/citizen-web/base/citizen-web-deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: citizen-web
  annotations:
    app.openshift.io/connects-to: citizen-api
  labels:
    app: citizen-web
    app.kubernetes.io/name: citizen-web
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: citizen-web
    app.kubernetes.io/part-of: traffic-court
    app.openshift.io/runtime: angularjs
spec:
  completionDeadlineSeconds: 1200
  replicas: 1
  selector:
    name: citizen-web
  strategy:
    type: Rolling
    maxSurge: 50%
    maxUnavailable: 0
  template:
    metadata:
      labels:
        dev-app: traffic-court
        name: citizen-web
    spec:
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/0198bb-tools/citizen-web:dev
          name: citizen-web
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 150m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
          - name: configuration-volume
            mountPath: /usr/share/nginx/html/assets/app.config.json
            subPath: app.config.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      volumes:
      - name: configuration-volume
        configMap:
          name: citizen-web-configuration
          defaultMode: 420
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - citizen-web
        from:
          kind: ImageStreamTag
          namespace: "0198bb-tools"
          name: "citizen-web:dev"
