gitops/components/apps/citizen-web/base/citizen-web-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dev.tickets.gov.bc.ca
  annotations:
    # if we do not use sticky-session, disable_cookies needs to be true
    haproxy.router.openshift.io/disable_cookies: "true"
    # balance algorithm
    haproxy.router.openshift.io/balance: roundrobin
  labels:
    app.kubernetes.io/part-of: citizen-portal
spec:
  host: dev.tickets.gov.bc.ca
  to:
    kind: Service
    name: citizen-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    certificate: "-----BEGIN CERTIFICATE-----certificates-----END CERTIFICATE-----"
    key: |
      -----BEGIN PRIVATE KEY-----
      private key
      -----END PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
