gitops/components/apps/citizen-web/base/citizen-web-route2.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dev.violationtickets.gov.bc.ca
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/balance: roundrobin
  labels:
    app.kubernetes.io/part-of: citizen-portal
spec:
  host: dev.violationtickets.gov.bc.ca
  to:
    kind: Service
    name: citizen-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    certificate: "-----BEGIN CERTIFICATE-----certificate-----END CERTIFICATE-----"
    key: |
      -----BEGIN PRIVATE KEY-----
      private key
      -----END PRIVATE KEY-----
  wildcardPolicy: None
